feat: 封鎖與自動禁言達五次 都將中斷聊天室連線

--- a/example/client.html
+++ b/example/client.html
@@ -305,6 +305,10 @@
                     var msgBody = JSON.parse(json)
 
                     document.getElementById("room_id").innerHTML = msgBody.room_id
+                case 20:
+                    var json = textDecoder.decode(data.slice(headerLen, packetLen));
+                    var msgBody = JSON.parse(json)
+                    console.log(msgBody.message)
                 default:
                     break
             }
