--- a/example/client.html
+++ b/example/client.html
@@ -332,8 +332,7 @@
         }
 
         function auth() {
-
-            var token = '{"token":"' + document.getElementById("token").value + '", "room_id":"' + document.getElementById("rid").value + '"}'
+            var token = '{"token":"' + document.getElementById("token").value + '", "room_id":' + document.getElementById("rid").value + '}'
             var headerBuf = new ArrayBuffer(rawHeaderLen);
             var headerView = new DataView(headerBuf, 0);
             var bodyBuf = textEncoder.encode(token);
@@ -354,8 +353,7 @@
             url: 'http://' + host + ':3111' + '/push/room',
             async: false,
             data: JSON.stringify({
-                uid: document.getElementById("uid").value,
-                key: document.getElementById("key").value,
+                room_id: document.getElementById("rid").value,
                 message: document.getElementById("btn-input").value
             }),
             headers: {
@@ -379,8 +377,7 @@
             url: 'http://' + host + ':3111' + '/red-envelope',
             async: false,
             data: JSON.stringify({
-                uid: document.getElementById("uid").value,
-                key: document.getElementById("key").value,
+                room_id: document.getElementById("rid").value,
                 amount: amount,
                 count: count,
                 message: document.getElementById("red_message").value,
@@ -402,7 +399,7 @@
     function room() {
         var headerBuf = new ArrayBuffer(rawHeaderLen);
         var headerView = new DataView(headerBuf, 0);
-        var room = '{"room_id":"' + document.getElementById("btn-room-id").value + '"}'
+        var room = '{"room_id":' + document.getElementById("btn-room-id").value + '}'
         var bodyBuf = textEncoder.encode(room);
         headerView.setInt32(packetOffset, rawHeaderLen + bodyBuf.byteLength);
         headerView.setInt16(headerOffset, rawHeaderLen);
@@ -425,8 +422,6 @@
             url: 'http://' + host + ':3111' + '/red-envelope',
             async: false,
             data: JSON.stringify({
-                uid: document.getElementById("uid").value,
-                key: document.getElementById("key").value,
                 token: $(this).data("token")
             }),
             headers: {
