--- a/example/client.html
+++ b/example/client.html
@@ -218,39 +218,56 @@
 
     var appendMsg = function (text, op) {
         obj = JSON.parse(text);
-        if (op == 6 || op == 10) {
-            document.getElementById("chat").innerHTML += "<li class=\"left clearfix\"><span class=\"chat-img pull-left\">\n" +
-                "                            <img src=\"http://placehold.it/50/55C1E7/fff&text=U\" alt=\"User Avatar\" class=\"img-circle\"/>\n" +
-                "                        </span>\n" +
-                "                                <div class=\"chat-body clearfix\">\n" +
-                "                                    <div class=\"header\">\n" + "                                    <small class=\" text-muted\"><span class=\"\"></span></small>\n" +
-                "                                        <strong class=\"primary-font\">" + obj.name + "</strong>\n" +
-                "                                    </div>\n" +
-                "                                    <p>\n" +
-                obj.message +
-                "                                    </p>\n" +
-                "                                </div>\n" +
-                "                            </li>";
+        console.log(op)
+        if (op == 6) {
+            if (obj.type == "message") {
+                document.getElementById("chat").innerHTML += "<li class=\"left clearfix\"><span class=\"chat-img pull-left\">\n" +
+                    "                            <img src=\"http://placehold.it/50/55C1E7/fff&text=U\" alt=\"User Avatar\" class=\"img-circle\"/>\n" +
+                    "                        </span>\n" +
+                    "                                <div class=\"chat-body clearfix\">\n" +
+                    "                                    <div class=\"header\">\n" + "                                    <small class=\" text-muted\"><span class=\"\"></span></small>\n" +
+                    "                                        <strong class=\"primary-font\">" + obj.name + "</strong>\n" +
+                    "                                    </div>\n" +
+                    "                                    <p>\n" +
+                    obj.message +
+                    "                                    </p>\n" +
+                    "                                </div>\n" +
+                    "                            </li>";
+            }
+
+            if (obj.type == "red_envelope") {
+                document.getElementById("chat").innerHTML += "<li class=\"left clearfix\ red-message \" data-token=\"" +
+                    obj.token +
+                    "\"><span class=\"chat-img pull-left\">\n" +
+                    "                            <img src=\"./redenvelope.png\" alt=\"User Avatar\" class=\"img-circle\"/>\n" +
+                    "                        </span>\n" +
+                    "                                <div class=\"chat-body clearfix\">\n" +
+                    "                                    <div class=\"header\">\n" + "                                    <small class=\" text-muted\"><span class=\"\"></span></small>\n" +
+                    "                                        <strong class=\"primary-font\">" + obj.name + "</strong>\n" +
+                    "                                    </div>\n" +
+                    "                                    <p>\n" +
+                    obj.message +
+                    "                                    </p>\n" +
+                    "                                </div>\n" +
+
+                    "                            </li>";
+            }
+
+            if (obj.type == "top") {
+                document.getElementById("chat").innerHTML += "<li class=\"left clearfix\"><span class=\"chat-img pull-left\">\n" +
+                    "                            <img src=\"http://placehold.it/50/55C1E7/fff&text=U\" alt=\"User Avatar\" class=\"img-circle\"/>\n" +
+                    "                        </span>\n" +
+                    "                                <div class=\"chat-body clearfix\">\n" +
+                    "                                    <div class=\"header\">\n" + "                                    <small class=\" text-muted\"><span class=\"\"></span></small>\n" +
+                    "                                        <strong class=\"primary-font\">" + obj.name + "</strong>\n" +
+                    "                                    </div>\n" +
+                    "                                    <p>\n" +
+                    obj.message +
+                    "                                    </p>\n" +
+                    "                                </div>\n" +
+                    "                            </li>";
+            }
         }
-
-        if (op == 9) {
-            document.getElementById("chat").innerHTML += "<li class=\"left clearfix\ red-message \" data-token=\"" +
-                obj.token +
-                "\"><span class=\"chat-img pull-left\">\n" +
-                "                            <img src=\"./redenvelope.png\" alt=\"User Avatar\" class=\"img-circle\"/>\n" +
-                "                        </span>\n" +
-                "                                <div class=\"chat-body clearfix\">\n" +
-                "                                    <div class=\"header\">\n" + "                                    <small class=\" text-muted\"><span class=\"\"></span></small>\n" +
-                "                                        <strong class=\"primary-font\">" + obj.name + "</strong>\n" +
-                "                                    </div>\n" +
-                "                                    <p>\n" +
-                obj.message +
-                "                                    </p>\n" +
-                "                                </div>\n" +
-
-                "                            </li>";
-        }
-
     }
 
     function login() {
@@ -308,7 +325,7 @@
                 case 20:
                     var json = textDecoder.decode(data.slice(headerLen, packetLen));
                     var msgBody = JSON.parse(json)
-                    console.log(msgBody.message)
+                    console.log(msgBody)
                 default:
                     break
             }
