--- a/example/client.html
+++ b/example/client.html
@@ -322,6 +322,10 @@
                     var msgBody = JSON.parse(json)
 
                     document.getElementById("room_id").innerHTML = msgBody.room_id
+                case 9:
+                    var json = textDecoder.decode(data.slice(headerLen, packetLen));
+                    var msgBody = JSON.parse(json)
+                    console.log(msgBody)
                 case 20:
                     var json = textDecoder.decode(data.slice(headerLen, packetLen));
                     var msgBody = JSON.parse(json)
